--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!--Introduction wuth pictures-->
 	<table bgcolor="white"><tr>
 	    <td><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/avatars/mr-pants-with-hat.png" height="150">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-	    <td><h4><font face="arial" size="4">Hello, world. I am Jared Delaney and I want to study business. I like to play basketball </font></h4></td>
+	    <td><h4><font face="arial" size="4">Hello, world I am Jared Delaney. I am currently a senior in High School and I dream to be an entrepreneur </font></h4></td>
 	</tr></table>
 
 <!--About Me-->
@@ -31,7 +31,7 @@
 		</font>
 	</h1>
 	<font face="helvetica" color="black" size="3">
-		[This is a personal, professional, and academic description of myself that does not reveal personal information to strangers.]
+		I was born and raised in the Bronx and have 2 siblings. 
 	</font>
 	<br><br>
 
