--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</font>
 	</h1>
 	<font face="helvetica" color="black" size="3">
-		I was born and raised in the Bronx and have 2 siblings. 
+		I was born and raised in the Bronx as a Afro-Latino, I was raised 
 	</font>
 	<br><br>
 
@@ -44,9 +44,9 @@
 	</h1>
 	<font face="helvetica" color="black" size="3">
 		<ul>
-		    <li>My work experience includes... []</li>
-		    <li>My volunteer experience includes... []</li>
-		    <li>My soft skills include... []</li>
+		    <li>My work experience includes the Summer Youth Employment Program.</li>
+		    <li>My volunteer experiences includes a park cleanup with my school, tutored a student for a project with 2,500 words, being team manager for high school basketball team, helping my teacher with her bulletin board and being in psychology club and learning more about psychology.</li>
+		    <li>My soft skills include communication, managing, tutoring, problem-solving, active listening, teamwork, time management </li>
 		    <li>My hard skills include... []</li>    
 		</ul>
 	</font>
