--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 		<ul>
 		    <li>My work experience includes the Summer Youth Employment Program.</li>
 		    <li>My volunteer experiences includes a park cleanup with my school, tutored a student for a project with 2,500 words, being team manager for high school basketball team, helping my teacher with her bulletin board and being in psychology club and learning more about psychology.</li>
-		    <li>My soft skills include communication, managing, tutoring, problem-solving, active listening, teamwork, time management </li>
-		    <li>My hard skills include... []</li>    
+		    <li>My soft skills include communication, managing, tutoring, problem-solving, active listening, teamwork, time management and work ethic </li>
+		    <li>My hard skills include Video Editing, Social Media Marketing, </li>    
 		</ul>
 	</font>
 	
@@ -59,7 +59,7 @@
 		</font>
 	</h1>
 	<font face="helvetica" color="black" size="3">
-		My interests include...[write interests here]
+		My interests include traveling, sports, music, 
 	</font>
 	<br><br><br>
 
