--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <!--Photos or Creative Work-->
 	<h1 align="center">
 		<font face="helvetica" color="blue" size="5">
-			[Title e.g. Photos, Creativity, etc.]
+			Hobbies
 		</font>
 	</h1>
     <table align="center"><tr>
