--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 		</font>
 	</h1>
     <table align="center"><tr>
-    <td><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/seasonal/gingerbread-family.png" width="200"></td>
-    <td><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/seasonal/gingerbread-family.png" width="200"></td>
-      <td><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/seasonal/gingerbread-family.png" width="200"></td>  
+    <td><img src="pexels-photo-1607855.jpg" width="200"></td>
+    <td><img src="pexels-photo-4522995.jpg" width="200"></td>
+    <td><img src="pexels-photo-316794.jpg" width="200"></td>  
     </tr></table>
 
 	<h3 align="center">
