--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<a href="#experience">EXPERIENCE</a>&nbsp;&nbsp;&nbsp;
 			<a href="#interests">INTERESTS</a>&nbsp;&nbsp;&nbsp;
 			<a href="[URL]">[SOCIAL]</a>&nbsp;&nbsp;&nbsp;
-			<a href="[URL]">LINKEDIN</a>
+			<a href="https://www.linkedin.com/in/jared-delaney/">LINKEDIN</a>
     	</b></font>
 	</h3><br>
 
