--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Jared Delaney</title>
 </head>
-<body background="pexels-dana-tentis-370799.jpg" bgcolor="white" link="blue" alink="blue" vlink="blue">
+<body background="pexels-dana-tentis-370799.jpg" link="blue" alink="blue" vlink="blue">
 
 <!--Links at the top-->	
 	<h3 id="top" align="center">
