--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     	</b></font>
 	</h3><br>
 
-<!--Introduction wuth pictures-->
-	<table bgcolor="white"><tr>
+<!--Iintroduction with pictures-->
+	<table> <tr>
 	    <td><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/avatars/mr-pants-with-hat.png" height="150">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 	    <td><h4><font face="arial" size="4">Hello, world I am Jared Delaney. I am currently a senior in High School and I dream to be an entrepreneur </font></h4></td>
 	</tr></table>
