--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<a href="#about">ABOUT</a>&nbsp;&nbsp;&nbsp;
 			<a href="#experience">EXPERIENCE</a>&nbsp;&nbsp;&nbsp;
 			<a href="#interests">INTERESTS</a>&nbsp;&nbsp;&nbsp;
-			<a href="[URL]">[SOCIAL]</a>&nbsp;&nbsp;&nbsp;
+			<a href="#Contact Information">Contact Information</a>&nbsp;&nbsp;&nbsp;
 			<a href="https://www.linkedin.com/in/jared-delaney/">LINKEDIN</a>
     	</b></font>
 	</h3><br>
@@ -31,7 +31,7 @@
 		</font>
 	</h1>
 	<font face="helvetica" color="black" size="3">
-		I was born and raised in the Bronx as a Afro-Latino, I was raised 
+		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parent and have 2 siblings.
 	</font>
 	<br><br>
 
@@ -61,7 +61,7 @@
 	<font face="helvetica" color="black" size="3">
 		My interests include traveling, sports, music, 
 	</font>
-	<br><br><br>
+	<br><br>
 
 <!--Photos or Creative Work-->
 	<h1 align="center">
@@ -78,5 +78,19 @@
 	<h3 align="center">
 	    <a href="#top"><font face="Courier" color="black">BACK TO THE TOP</font></a>
 	</h3>
+	
+	<!--Contact Information-->
+	<br>
+	<h1 id="Contact Information" align="center">
+		<font face="helvetica" color="blue" size="5">
+			Contacr Information
+		</font>
+	</h1>
+	<font face="helvetica" color="black" size="3">
+		<ul>
+		    <li>jaredd15@nycstudents.net</li>
+		    <li>929-485-8431</li    
+		</ul>
+	</font>
 </body>
 </html>
