--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<br>
 	<h1 id="Contact Information" align="center">
 		<font face="helvetica" color="blue" size="5">
-			Contacr Information
+			Contact Information
 		</font>
 	</h1>
 	<font face="helvetica" color="black" size="3">
