--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Jared Delaney</title>
 </head>
-<body background="pexels-dana-tentis-370799.jpg" link="blue" alink="blue" vlink="blue">
+<body background="pexels-dana-tentis-370799.jpg" link="#ffffff" alink="#ffffff" vlink="#ffffff">
 
 <!--Links at the top-->	
 	<h3 id="top" align="center">
@@ -12,7 +12,7 @@
 			<a href="#about">ABOUT</a>&nbsp;&nbsp;&nbsp;
 			<a href="#experience">EXPERIENCE</a>&nbsp;&nbsp;&nbsp;
 			<a href="#interests">INTERESTS</a>&nbsp;&nbsp;&nbsp;
-			<a href="#Contact Information">Contact Information</a>&nbsp;&nbsp;&nbsp;
+			<a href="#Contact">CONTACT</a>&nbsp;&nbsp;&nbsp;
 			<a href="https://www.linkedin.com/in/jared-delaney/">LINKEDIN</a>
     	</b></font>
 	</h3><br>
@@ -20,29 +20,29 @@
 <!--Iintroduction with pictures-->
 	<table> <tr>
 	    <td><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/avatars/mr-pants-with-hat.png" height="150">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-	    <td><h4><font face="arial" size="4">Hello, world I am Jared Delaney. I am currently a senior in High School and I dream to be an entrepreneur </font></h4></td>
+	    <td><h4><font face="arial" size="4">Hello, world I am Jared Delaney. I am currently a senior in High School and I dream to be an entrepreneur. </font></h4></td>
 	</tr></table>
 
 <!--About Me-->
 	<br>
 	<h1 id="about" align="center">
-		<font face="helvetica" color="blue" size="5">
+		<font face="helvetica" color="#ffffff" size="7">
 			About Me
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="3">
-		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parent and have 2 siblings.
+	<font face="helvetica" color="#black" size="5">
+		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. 
 	</font>
 	<br><br>
 
 <!--My Experience-->
 	<br>
 	<h1 id="experience" align="center">
-		<font face="helvetica" color="blue" size="5">
+		<font face="helvetica" color="#ffffff" size="5">
 			Experience
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="3">
+	<font face="helvetica" color="black" size="4">
 		<ul>
 		    <li>My work experience includes the Summer Youth Employment Program.</li>
 		    <li>My volunteer experiences includes a park cleanup with my school, tutored a student for a project with 2,500 words, being team manager for high school basketball team, helping my teacher with her bulletin board and being in psychology club and learning more about psychology.</li>
@@ -54,18 +54,18 @@
 <!--Interests-->
 	<br>
 	<h1 id="interests" align="center">
-		<font face="helvetica" color="blue" size="5">
+		<font face="helvetica" color="#ffffff" size="5">
 			Interests
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="3">
-		My interests include traveling, sports, music, 
+	<font face="helvetica" color="black" size="4">
+		My interests include traveling, basketball, music, animals, video games, movies, boardgames.
 	</font>
 	<br><br>
 
 <!--Photos or Creative Work-->
 	<h1 align="center">
-		<font face="helvetica" color="blue" size="5">
+		<font face="helvetica" color="#ffffff" size="5">
 			Hobbies
 		</font>
 	</h1>
@@ -78,7 +78,7 @@
 	<!--Contact Information-->
 	<br>
 	<h1 id="Contact Information" align="center">
-		<font face="helvetica" color="blue" size="5">
+		<font face="helvetica" color="#ffffff" size="5">
 			Contact Information
 		</font>
 	</h1>
