--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			About Me
 		</font>
 	</h1>
-	<font face="helvetica" color="#black" size="5">
+	<font face="helvetica" color="black" size="5">
 		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. 
 	</font>
 	<br><br>
@@ -38,27 +38,27 @@
 <!--My Experience-->
 	<br>
 	<h1 id="experience" align="center">
-		<font face="helvetica" color="#ffffff" size="5">
+		<font face="helvetica" color="#ffffff" size="7">
 			Experience
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="4">
+	<font face="helvetica" color="black" size="5">
 		<ul>
 		    <li>My work experience includes the Summer Youth Employment Program.</li>
 		    <li>My volunteer experiences includes a park cleanup with my school, tutored a student for a project with 2,500 words, being team manager for high school basketball team, helping my teacher with her bulletin board and being in psychology club and learning more about psychology.</li>
 		    <li>My soft skills include communication, managing, tutoring, problem-solving, active listening, teamwork, time management and work ethic </li>
-		    <li>My hard skills include Video Editing, Social Media Marketing, </li>    
+		    <li>My hard skills include Video Editing, Social Media Marketing, Basic HTML </li>    
 		</ul>
 	</font>
 	
 <!--Interests-->
 	<br>
 	<h1 id="interests" align="center">
-		<font face="helvetica" color="#ffffff" size="5">
+		<font face="helvetica" color="#ffffff" size="7">
 			Interests
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="4">
+	<font face="helvetica" color="black" size="5">
 		My interests include traveling, basketball, music, animals, video games, movies, boardgames.
 	</font>
 	<br><br>
@@ -78,11 +78,11 @@
 	<!--Contact Information-->
 	<br>
 	<h1 id="Contact Information" align="center">
-		<font face="helvetica" color="#ffffff" size="5">
+		<font face="helvetica" color="#ffffff" size="7">
 			Contact Information
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="3">
+	<font face="helvetica" color="black" size="5">
 		<ul>
 		    <li>jaredd15@nycstudents.net</li>
 		    <li>929-485-8431</li    
