--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 <!--Iintroduction with pictures-->
 	<table> <tr>
 	    <td><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/avatars/mr-pants-with-hat.png" height="150">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-	    <td><h4><font face="arial" size="4">Hello, world I am Jared Delaney. I am currently a senior in High School and I dream to be an entrepreneur. </font></h4></td>
+	    <td><h4><font face="Comic Sans MS" size="9">Hello, world I am Jared Delaney. I am currently a senior in High School and I dream to be an entrepreneur. </font></h4></td>
 	</tr></table>
 
 <!--About Me-->
 	<br>
 	<h1 id="about" align="center">
-		<font face="helvetica" color="#ffffff" size="7">
+		<font face="Arial" color="#ffffff" size="7">
 			About Me
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="5">
+	<font face="Comic Sans MS" color="black" size="5">
 		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. 
 	</font>
 	<br><br>
@@ -38,34 +38,34 @@
 <!--My Experience-->
 	<br>
 	<h1 id="experience" align="center">
-		<font face="helvetica" color="#ffffff" size="7">
+		<font face="Arial" color="#ffffff" size="7">
 			Experience
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="5">
+	<font face="Comic Sans MS" color="black" size="5">
 		<ul>
 		    <li>My work experience includes the Summer Youth Employment Program.</li>
 		    <li>My volunteer experiences includes a park cleanup with my school, tutored a student for a project with 2,500 words, being team manager for high school basketball team, helping my teacher with her bulletin board and being in psychology club and learning more about psychology.</li>
 		    <li>My soft skills include communication, managing, tutoring, problem-solving, active listening, teamwork, time management and work ethic </li>
-		    <li>My hard skills include Video Editing, Social Media Marketing, Basic HTML </li>    
+		    <li>My hard skills include Video Editing, Social Media Marketing, Basic HTML skills,</li>    
 		</ul>
 	</font>
 	
 <!--Interests-->
 	<br>
 	<h1 id="interests" align="center">
-		<font face="helvetica" color="#ffffff" size="7">
+		<font face="Arial" color="#ffffff" size="7">
 			Interests
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="5">
+	<font face="Comic Sans MS" color="black" size="5">
 		My interests include traveling, basketball, music, animals, video games, movies, boardgames.
 	</font>
 	<br><br>
 
 <!--Photos or Creative Work-->
 	<h1 align="center">
-		<font face="helvetica" color="#ffffff" size="5">
+		<font face="Arial" color="#ffffff" size="5">
 			Hobbies
 		</font>
 	</h1>
@@ -78,11 +78,11 @@
 	<!--Contact Information-->
 	<br>
 	<h1 id="Contact Information" align="center">
-		<font face="helvetica" color="#ffffff" size="7">
+		<font face="Arial" color="#ffffff" size="7">
 			Contact Information
 		</font>
 	</h1>
-	<font face="helvetica" color="black" size="5">
+	<font face="Comic Sans MS" color="black" size="5">
 		<ul>
 		    <li>jaredd15@nycstudents.net</li>
 		    <li>929-485-8431</li    
@@ -90,7 +90,7 @@
 	</font>
 	
 	<h3 align="center">
-	    <a href="#top"><font face="Courier" color="black">BACK TO THE TOP</font></a>
+	    <a href="#top"><font face="Arial" color="black">BACK TO THE TOP</font></a>
 	</h3>
 	
 	
