--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 		</font>
 	</h1>
    	<table width="90%" align="center"><tr>
-		<td align="center"><a href="Halloween picture.png"><img src="Halloween picture.png" width="250"></a></td>
-   		<td align="center"><a href=”Mandela.psd"><img src="Mandela.psd" width="250"></a></td>
+		<td align="center"><a href="Halloween picture.png"><img src="Halloween picture.png" width="300"></a></td>
+   		<td align="center"><a href="Mandela.psd"><img src="Mandela.psd" width="250"></a></td>
 		<td align="center"><a href=”My project-1-2.png"><img src="My project-1-2.png" width="250"></a></td>
    	</tr><tr>
    		<td>[Piece 1: With this piece I attempted to capture the essence of penguins. I am most proud of this piece because I believe the asymmetry speaks to the collapse of a capitalistic worldview.]</td>
