--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</font>
 	</h1>
 	<font face="Comic Sans MS" color="black" size="5">
-		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. 
+		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. I plan on going to a college in or out of state after graduating highschool 
 	</font>
 	<br><br>
 
@@ -72,18 +72,14 @@
 		</font>
 	</h1>
    	<table width="90%" align="center"><tr>
-		<td align="center"><a href="Halloween picture.png"><img src="Halloween picture.png" width="300"></a></td>
+		<td align="center"><a href="Halloween picture.png"><img src="Halloween picture.png" width="350"></a></td>
    		<td align="center"><a href="Mandela.psd"><img src="Mandela.psd" width="250"></a></td>
 		<td align="center"><a href=”My project-1-2.png"><img src="My project-1-2.png" width="250"></a></td>
    	</tr><tr>
-   		<td>[Piece 1: With this piece I attempted to capture the essence of penguins. I am most proud of this piece because I believe the asymmetry speaks to the collapse of a capitalistic worldview.]</td>
+   		<td> In this piece I changed the filter and colors of my original photo. </td>
    		<td>[Piece 2: In this piece I tried to capture the pure opposite of penguin-ness. The design was especially challenging here because representing objects along a four-dimensional plane proved to require more string theory than I had originally hoped.]</td>
    		<td>[Piece 3: This piece was inspired by nights spent along the Oregon Trail during the zombie apocalypse. In the multiplicity of materials used, I tried to symbolize the lingering interposition of the Freudian superego along Jungian archetypes throughout Viennese architecture.]</td>
    	</tr></table><br><br>
-
-	<h1 align="center">
-	 <a href="#top"><font face="Courier" color="black">BACK TO THE TOP</font></a>
-	</h1>
 
 	<!--Contact Information-->
 	<br>
