--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</font>
 	</h1>
 	<font face="Comic Sans MS" color="black" size="5">
-		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. I plan on going to a college in or out of state after graduating highschool 
+		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. I plan on going to a college in or out of state after graduating highschool. 
 	</font>
 	<br><br>
 
@@ -75,10 +75,10 @@
 		<td align="center"><a href="Halloween picture.png"><img src="Halloween picture.png" width="350"></a></td>
    		<td align="center"><a href="Mandela.psd"><img src="Mandela.psd" width="250"></a></td>
 		<td align="center"><a href=”My project-1-2.png"><img src="My project-1-2.png" width="250"></a></td>
-   	</tr><tr>
-   		<td> In this piece I changed the filter and colors of my original photo. </td>
-   		<td>[Piece 2: In this piece I tried to capture the pure opposite of penguin-ness. The design was especially challenging here because representing objects along a four-dimensional plane proved to require more string theory than I had originally hoped.]</td>
-   		<td>[Piece 3: This piece was inspired by nights spent along the Oregon Trail during the zombie apocalypse. In the multiplicity of materials used, I tried to symbolize the lingering interposition of the Freudian superego along Jungian archetypes throughout Viennese architecture.]</td>
+   	</tr>
+   		<td> In this piece I changed the filer and color of my photo. I changed the colors on this image from orange and black from blue and black. I also changed the photo from looking realistic to looking pixelated.</td>
+   		<td> This piece I chose my favorite flower and transformed it into a mandela. This design was really challenging and time consuming because I needed to repeat steps to create the Mandela. </td>
+   		<td> This piece was inspired by where I was born and grew up. I combined 4 different pictures from New York with 3 words saying "Born and Raised". I like this project because it is simple and shows where im from.</td>
    	</tr></table><br><br>
 
 	<!--Contact Information-->
