--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</font>
 	</h1>
 	<font face="Comic Sans MS" color="black" size="5">
-		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. I plan on going to a college in or out of state after graduating highschool. 
+		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. I plan on going to a college in or out of state after graduating highschool. I was always hesitant about going to college but I realized college will help me not hurt me. I am interested in studying business and starting my own business by 21.
 	</font>
 	<br><br>
 
@@ -73,7 +73,7 @@
 	</h1>
    	<table width="90%" align="center"><tr>
 		<td align="center"><a href="Halloween picture.png"><img src="Halloween picture.png" width="350"></a></td>
-   		<td align="center"><a href="Mandela.psd"><img src="Mandela.psd" width="250"></a></td>
+   		<td align="center"><a href="Screenshot 2022-11-23 11.36.28 AM.png"><img src="Screenshot 2022-11-23 11.36.28 AM.png" width="250"></a></td>
 		<td align="center"><a href=”My project-1-2.png"><img src="My project-1-2.png" width="250"></a></td>
    	</tr>
    		<td> In this piece I changed the filer and color of my photo. I changed the colors on this image from orange and black from blue and black. I also changed the photo from looking realistic to looking pixelated.</td>
