--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</font>
 	</h1>
 	<font face="Comic Sans MS" color="black" size="5">
-		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. I plan on going to a college in or out of state after graduating highschool. I was always hesitant about going to college but I realized college will help me not hurt me. I am interested in studying business and starting my own business by 21.
+		I was born and raised in the Bronx as a Afro-Latino, I was raised by both of my parents and have 2 siblings. I plan on going to a college in or out of state after graduating highschool. I was always hesitant about going to college but I realized college will help me not hurt me. I am interested in studying business and hoping to start my own business by 21.
 	</font>
 	<br><br>
 
