--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
    		<td align="center"><a href="Screenshot 2022-11-23 11.36.28 AM.png"><img src="Screenshot 2022-11-23 11.36.28 AM.png" width="250"></a></td>
 		<td align="center"><a href=”My project-1-2.png"><img src="My project-1-2.png" width="250"></a></td>
    	</tr>
+		</font>
+	</h1>
+	<font face="Comic Sans MS" color="black" size="6">.
+		</font>
    		<td> In this piece I changed the filer and color of my photo. I changed the colors on this image from orange and black from blue and black. I also changed the photo from looking realistic to looking pixelated.</td>
    		<td> This piece I chose my favorite flower and transformed it into a mandela. This design was really challenging and time consuming because I needed to repeat steps to create the Mandela. </td>
    		<td> This piece was inspired by where I was born and grew up. I combined 4 different pictures from New York with 3 words saying "Born and Raised". I like this project because it is simple and shows where im from.</td>
