--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!--Iintroduction with pictures-->
 	<table> <tr>
-	    <td><img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/avatars/mr-pants-with-hat.png" height="150">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+	    <td><img src="Popartself.png" height="150">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 	    <td><h4><font face="Comic Sans MS" size="9">Hello, world I am Jared Delaney. I am currently a senior in High School and I dream to be an entrepreneur. </font></h4></td>
 	</tr></table>
 
