--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!--Iintroduction with pictures-->
 	<table> <tr>
-	    <td><img src="istockphoto-1224158985-612x612.jpg" height="150">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+	    <td><img src="" height="150">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 	    <td><h4><font face="Comic Sans MS" size="9">Hello, world I am Jared Delaney. I am currently a senior in High School and I dream to be an entrepreneur. </font></h4></td>
 	</tr></table>
 
